--- a/clint/recnt-order.html
+++ b/clint/recnt-order.html
@@ -91,137 +91,95 @@
             </div>
         </div>
     </header>
-    <section class="rest text-center p-5">
-        <img src="../assets/images/res-img.png" class="m-5" alt="">
-        <div class="rounded-pill bg-white w300 m-5 me-auto ms-auto p-3">
-            <div class="position-relative d-inline-block">
-                <a href="" class="float"></a>
-                <i class="fa-solid fa-star main-color fa-2x"></i>
-            </div>
-            <div class="position-relative d-inline-block">
-                <a href="" class="float"></a>
-                <i class="fa-solid fa-star main-color fa-2x"></i>
-            </div>
-            <div class="position-relative d-inline-block">
-                <a href="" class="float"></a>
-                <i class="fa-solid fa-star main-color fa-2x"></i>
-            </div>
-            <div class="position-relative d-inline-block">
-                <a href="" class="float"></a>
-                <i class="fa-solid fa-star fa-2x"></i>
-            </div>
-            <div class="position-relative d-inline-block">
-                <a href="" class="float"></a>
-                <i class="fa-solid fa-star fa-2x"></i>
-            </div>
-        </div>
+    <section>
+        <header class="p-3 bg-nav">
+            <nav class=" me-auto ms-auto">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4 col-md-6 col-sm-12  ms-auto me-auto">
+                            <p class="fs-1 text-light text-center position-relative under-line">
+                                <a href="recnt-order.html" class="float"></a>
+                                طلبات حالية
+                            </p>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 ms-auto me-auto">
+                            <p class="fs-1 text-light text-center position-relative ">
+                                <a href="last-order.html" class="float"></a>
+                                طلبات سابقة
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </header>
     </section>
-    <main class="rest-product pt-5">
-        <h1 class="mt-5 text-center">قائمة الطعام /منتجاتي</h1>
-        <div class="rounded-pill text-light text-center fs-3 m-5 ms-auto me-auto w300 p-4 bg position-relative">
-            <a href="" class="float"></a>
-            اضف منتج جديد
-        </div>
-        <div class="container pb">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5 text-center position-relative rounde">
-                        <a href="#" class="float"></a>
-                        <i class="fa-solid fa-circle-xmark x"></i>
-                        <img src="../assets/images/burger2.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="fs-3 main-color">بيف برجر 250 جرام</p>
-                            <p class="text-black-50 fs12">
-                                هناك حقيقة مثبتة ان الفراخ الكرسبي حارة
-                            </p>
-                            <div class="price text-end">
-                                <img src="../assets/images/piggy-bank.png" alt="">
-                                <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">55ريتل</p>
+    <main>
+        <div class="container">
+            <div class="row add-offer w-8 m-4 me-auto ms-auto rounde">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="border-red m-3">
+                        <img class="w-100" src="../assets/images/burger.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <p class="main-color mt-5 fs-3">
+                        بيف برجر 250 جرام
+                    </p>
+                    <p class="text-black-50 ">
+                        رقم التلفون : 564416
+                    </p>
+                    <p class="text-black-50">
+                        السعر : 75 ريال
+                    </p>
+                    <p class="text-black-50">
+                        التوصيل : 10 ريال
+                    </p>
+                    <p class="text-black-50">
+                        المجموع : 85 ريال
+                    </p>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="position-relative h-100">
+                        <div class="position-absolute w-75 center-y">
+                            <div class="p-2 mt-3 text-center fs-2 text-light position-relative rounded-pill shadow w-75 bg-green">
+                                <a href="" class="float"></a>
+                                استلام
+                            </div>
+                            <div class="p-2 mt-3 text-center fs-2 text-light position-relative rounded-pill w-75 shadow bg-nav">
+                                <a href="" class="float"></a>
+                                رفض
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5 text-center position-relative rounde">
-                        <a href="#" class="float"></a>
-                        <i class="fa-solid fa-circle-xmark x"></i>
-                        <img src="../assets/images/burger2.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="fs-3 main-color">بيف برجر 250 جرام</p>
-                            <p class="text-black-50 fs12">
-                                هناك حقيقة مثبتة ان الفراخ الكرسبي حارة
-                            </p>
-                            <div class="price text-end">
-                                <img src="../assets/images/piggy-bank.png" alt="">
-                                <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">55ريتل</p>
-                            </div>
-                        </div>
+            </div>
+            <div class="row add-offer w-8 m-4 me-auto ms-auto rounde">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="border-red m-3">
+                        <img class="w-100" src="../assets/images/burger.jpg" alt="">
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5 text-center position-relative rounde">
-                        <a href="#" class="float"></a>
-                        <i class="fa-solid fa-circle-xmark x"></i>
-                        <img src="../assets/images/burger2.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="fs-3 main-color">بيف برجر 250 جرام</p>
-                            <p class="text-black-50 fs12">
-                                هناك حقيقة مثبتة ان الفراخ الكرسبي حارة
-                            </p>
-                            <div class="price text-end">
-                                <img src="../assets/images/piggy-bank.png" alt="">
-                                <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">55ريتل</p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <p class="main-color mt-5 fs-3">
+                        بيف برجر 250 جرام
+                    </p>
+                    <p class="text-black-50 ">
+                        رقم التلفون : 564416
+                    </p>
+                    <p class="text-black-50">
+                        المجموع : 75 ريال
+                    </p>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5 text-center position-relative rounde">
-                        <a href="#" class="float"></a>
-                        <i class="fa-solid fa-circle-xmark x"></i>
-                        <img src="../assets/images/burger2.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="fs-3 main-color">بيف برجر 250 جرام</p>
-                            <p class="text-black-50 fs12">
-                                هناك حقيقة مثبتة ان الفراخ الكرسبي حارة
-                            </p>
-                            <div class="price text-end">
-                                <img src="../assets/images/piggy-bank.png" alt="">
-                                <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">55ريتل</p>
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="position-relative h-100">
+                        <div class="position-absolute w-75 center-y">
+                            <div class="p-2 mt-3 text-center fs-2 text-light position-relative rounded-pill shadow w-75 bg-green">
+                                <a href="" class="float"></a>
+                                استلام
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5 text-center position-relative rounde">
-                        <a href="#" class="float"></a>
-                        <i class="fa-solid fa-circle-xmark x"></i>
-                        <img src="../assets/images/burger2.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="fs-3 main-color">بيف برجر 250 جرام</p>
-                            <p class="text-black-50 fs12">
-                                هناك حقيقة مثبتة ان الفراخ الكرسبي حارة
-                            </p>
-                            <div class="price text-end">
-                                <img src="../assets/images/piggy-bank.png" alt="">
-                                <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">55ريتل</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5 text-center position-relative rounde">
-                        <a href="#" class="float"></a>
-                        <i class="fa-solid fa-circle-xmark x"></i>
-                        <img src="../assets/images/burger2.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="fs-3 main-color">بيف برجر 250 جرام</p>
-                            <p class="text-black-50 fs12">
-                                هناك حقيقة مثبتة ان الفراخ الكرسبي حارة
-                            </p>
-                            <div class="price text-end">
-                                <img src="../assets/images/piggy-bank.png" alt="">
-                                <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">55ريتل</p>
+                            <div class="p-2 mt-3 text-center fs-2 text-light position-relative rounded-pill w-75 shadow bg-nav">
+                                <a href="" class="float"></a>
+                                رفض
                             </div>
                         </div>
                     </div>
