--- a/clint/rest.html
+++ b/clint/rest.html
@@ -117,16 +117,10 @@
         </div>
     </section>
     <main class="rest-product pt-5">
-        <h1 class="mt-5 text-center">قائمة الطعام /منتجاتي</h1>
-        <div class="rounded-pill text-light text-center fs-3 m-5 ms-auto me-auto w300 p-4 bg position-relative">
-            <a href="" class="float"></a>
-            اضف منتج جديد
-        </div>
         <div class="container pb">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5 text-center position-relative rounde">
-                        <a href="#" class="float"></a>
+                    <div class="card mt-5 text-center rounde">
                         <i class="fa-solid fa-circle-xmark x"></i>
                         <img src="../assets/images/burger2.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -137,13 +131,20 @@
                             <div class="price text-end">
                                 <img src="../assets/images/piggy-bank.png" alt="">
                                 <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">55ريتل</p>
+                            </div>
+                            <div class="price text-end">
+                                <img src="../assets/images/tray2.png" alt="">
+                                <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">30 دقيقة تقريبا</p>
+                            </div>
+                            <div class="position-relative rounde text-light text-center fs-3 mt-3  ms-auto me-auto w300 p-2 bg">
+                                <a href="pro.html" class="flaot"></a>
+                                اضغط للتفاصيل
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5 text-center position-relative rounde">
-                        <a href="#" class="float"></a>
+                    <div class="card mt-5 text-center rounde">
                         <i class="fa-solid fa-circle-xmark x"></i>
                         <img src="../assets/images/burger2.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -154,13 +155,20 @@
                             <div class="price text-end">
                                 <img src="../assets/images/piggy-bank.png" alt="">
                                 <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">55ريتل</p>
+                            </div>
+                            <div class="price text-end">
+                                <img src="../assets/images/tray2.png" alt="">
+                                <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">30 دقيقة تقريبا</p>
+                            </div>
+                            <div class="position-relative rounde text-light text-center fs-3 mt-3  ms-auto me-auto w300 p-2 bg">
+                                <a href="pro.html" class="flaot"></a>
+                                اضغط للتفاصيل
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5 text-center position-relative rounde">
-                        <a href="#" class="float"></a>
+                    <div class="card mt-5 text-center rounde">
                         <i class="fa-solid fa-circle-xmark x"></i>
                         <img src="../assets/images/burger2.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -171,13 +179,20 @@
                             <div class="price text-end">
                                 <img src="../assets/images/piggy-bank.png" alt="">
                                 <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">55ريتل</p>
+                            </div>
+                            <div class="price text-end">
+                                <img src="../assets/images/tray2.png" alt="">
+                                <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">30 دقيقة تقريبا</p>
+                            </div>
+                            <div class="position-relative rounde text-light text-center fs-3 mt-3  ms-auto me-auto w300 p-2 bg">
+                                <a href="pro.html" class="flaot"></a>
+                                اضغط للتفاصيل
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5 text-center position-relative rounde">
-                        <a href="#" class="float"></a>
+                    <div class="card mt-5 text-center rounde">
                         <i class="fa-solid fa-circle-xmark x"></i>
                         <img src="../assets/images/burger2.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -188,13 +203,20 @@
                             <div class="price text-end">
                                 <img src="../assets/images/piggy-bank.png" alt="">
                                 <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">55ريتل</p>
+                            </div>
+                            <div class="price text-end">
+                                <img src="../assets/images/tray2.png" alt="">
+                                <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">30 دقيقة تقريبا</p>
+                            </div>
+                            <div class="position-relative rounde text-light text-center fs-3 mt-3  ms-auto me-auto w300 p-2 bg">
+                                <a href="pro.html" class="flaot"></a>
+                                اضغط للتفاصيل
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5 text-center position-relative rounde">
-                        <a href="#" class="float"></a>
+                    <div class="card mt-5 text-center rounde">
                         <i class="fa-solid fa-circle-xmark x"></i>
                         <img src="../assets/images/burger2.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -205,13 +227,20 @@
                             <div class="price text-end">
                                 <img src="../assets/images/piggy-bank.png" alt="">
                                 <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">55ريتل</p>
+                            </div>
+                            <div class="price text-end">
+                                <img src="../assets/images/tray2.png" alt="">
+                                <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">30 دقيقة تقريبا</p>
+                            </div>
+                            <div class="position-relative rounde text-light text-center fs-3 mt-3  ms-auto me-auto w300 p-2 bg">
+                                <a href="pro.html" class="flaot"></a>
+                                اضغط للتفاصيل
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5 text-center position-relative rounde">
-                        <a href="#" class="float"></a>
+                    <div class="card mt-5 text-center rounde">
                         <i class="fa-solid fa-circle-xmark x"></i>
                         <img src="../assets/images/burger2.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -223,9 +252,18 @@
                                 <img src="../assets/images/piggy-bank.png" alt="">
                                 <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">55ريتل</p>
                             </div>
+                            <div class="price text-end">
+                                <img src="../assets/images/tray2.png" alt="">
+                                <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">30 دقيقة تقريبا</p>
+                            </div>
+                            <div class="position-relative rounde text-light text-center fs-3 mt-3  ms-auto me-auto w300 p-2 bg">
+                                <a href="pro.html" class="flaot"></a>
+                                اضغط للتفاصيل
+                            </div>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </main>
