--- a/restaurant/last-order.html
+++ b/restaurant/last-order.html
@@ -91,143 +91,94 @@
             </div>
         </div>
     </header>
-    <section class="rest text-center p-5">
-        <img src="../assets/images/res-img.png" class="m-5" alt="">
-        <div class="rounded-pill bg-white w300 m-5 me-auto ms-auto p-3">
-            <div class="position-relative d-inline-block">
-                <a href="" class="float"></a>
-                <i class="fa-solid fa-star main-color fa-2x"></i>
-            </div>
-            <div class="position-relative d-inline-block">
-                <a href="" class="float"></a>
-                <i class="fa-solid fa-star main-color fa-2x"></i>
-            </div>
-            <div class="position-relative d-inline-block">
-                <a href="" class="float"></a>
-                <i class="fa-solid fa-star main-color fa-2x"></i>
-            </div>
-            <div class="position-relative d-inline-block">
-                <a href="" class="float"></a>
-                <i class="fa-solid fa-star fa-2x"></i>
-            </div>
-            <div class="position-relative d-inline-block">
-                <a href="" class="float"></a>
-                <i class="fa-solid fa-star fa-2x"></i>
-            </div>
-        </div>
+    <section>
+        <header class="p-3 bg-nav">
+            <nav class=" me-auto ms-auto">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4 col-md-6 col-sm-12 ms-auto me-auto">
+                            <p class="fs-1 text-light text-center position-relative ">
+                                <a href="new-order.html" class="float"></a>
+                                طلبات جديدة
+                            </p>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12  ms-auto me-auto">
+                            <p class="fs-1 text-light text-center position-relative ">
+                                <a href="recent-order.html" class="float"></a>
+                                طلبات حالية
+                            </p>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 ms-auto me-auto">
+                            <p class="fs-1 text-light text-center position-relative under-line">
+                                <a href="last-order.html" class="float"></a>
+                                طلبات سابقة
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </header>
     </section>
-    <main class="rest-product pt-5">
-        <h1 class="mt-5 text-center">قائمة الطعام /منتجاتي</h1>
-        <div class="rounded-pill text-light text-center fs-3 m-5 ms-auto me-auto w300 p-4 bg position-relative">
-            <a href="" class="float"></a>
-            اضف منتج جديد
-        </div>
-        <div class="container pb">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5 text-center position-relative rounde">
-                        <a href="#" class="float"></a>
-                        <i class="fa-solid fa-circle-xmark x"></i>
-                        <img src="../assets/images/burger2.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="fs-3 main-color">بيف برجر 250 جرام</p>
-                            <p class="text-black-50 fs12">
-                                هناك حقيقة مثبتة ان الفراخ الكرسبي حارة
-                            </p>
-                            <div class="price text-end">
-                                <img src="../assets/images/piggy-bank.png" alt="">
-                                <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">55ريتل</p>
-                            </div>
-                        </div>
+    <main class="p-3">
+        <div class="mt-5 w-75 ms-auto me-auto rounde add-offer p-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <img class=" p-5 w-100" src="../assets/images/jakob-owens-565883-unsplash.png" alt="">
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5 text-center position-relative rounde">
-                        <a href="#" class="float"></a>
-                        <i class="fa-solid fa-circle-xmark x"></i>
-                        <img src="../assets/images/burger2.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="fs-3 main-color">بيف برجر 250 جرام</p>
-                            <p class="text-black-50 fs12">
-                                هناك حقيقة مثبتة ان الفراخ الكرسبي حارة
+                    <div class="col-lg-8 col-md-6 col-sm-12">
+                        <div class="p-5 pe-3 mt-3">
+                            <p class="fs-2 fw-bold">
+                                العميل : مازن محمد
                             </p>
-                            <div class="price text-end">
-                                <img src="../assets/images/piggy-bank.png" alt="">
-                                <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">55ريتل</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5 text-center position-relative rounde">
-                        <a href="#" class="float"></a>
-                        <i class="fa-solid fa-circle-xmark x"></i>
-                        <img src="../assets/images/burger2.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="fs-3 main-color">بيف برجر 250 جرام</p>
-                            <p class="text-black-50 fs12">
-                                هناك حقيقة مثبتة ان الفراخ الكرسبي حارة
+                            <p class="main-color fs-3">
+                                رقم الطلب : 564416
                             </p>
-                            <div class="price text-end">
-                                <img src="../assets/images/piggy-bank.png" alt="">
-                                <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">55ريتل</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5 text-center position-relative rounde">
-                        <a href="#" class="float"></a>
-                        <i class="fa-solid fa-circle-xmark x"></i>
-                        <img src="../assets/images/burger2.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="fs-3 main-color">بيف برجر 250 جرام</p>
-                            <p class="text-black-50 fs12">
-                                هناك حقيقة مثبتة ان الفراخ الكرسبي حارة
+                            <p class="main-color fs-3 ">
+                                المجموع : 75ريال
                             </p>
-                            <div class="price text-end">
-                                <img src="../assets/images/piggy-bank.png" alt="">
-                                <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">55ريتل</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5 text-center position-relative rounde">
-                        <a href="#" class="float"></a>
-                        <i class="fa-solid fa-circle-xmark x"></i>
-                        <img src="../assets/images/burger2.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="fs-3 main-color">بيف برجر 250 جرام</p>
-                            <p class="text-black-50 fs12">
-                                هناك حقيقة مثبتة ان الفراخ الكرسبي حارة
+                            <p class="main-color fs-4">
+                                العنوان : 127شارع المعز بن علي -حي الروضة الرياض
                             </p>
-                            <div class="price text-end">
-                                <img src="../assets/images/piggy-bank.png" alt="">
-                                <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">55ريتل</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="card mt-5 text-center position-relative rounde">
-                        <a href="#" class="float"></a>
-                        <i class="fa-solid fa-circle-xmark x"></i>
-                        <img src="../assets/images/burger2.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="fs-3 main-color">بيف برجر 250 جرام</p>
-                            <p class="text-black-50 fs12">
-                                هناك حقيقة مثبتة ان الفراخ الكرسبي حارة
-                            </p>
-                            <div class="price text-end">
-                                <img src="../assets/images/piggy-bank.png" alt="">
-                                <p class="pe-3 main-color d-inline-block fs-4 mb-0 mt-3 down position-relative">55ريتل</p>
-                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="rounded-pill fs-3 text-center text-light ms-auto me-auto w-25 bg-green p-1 position-relative">
+                <a href="" class="float"></a>
+                تاكيد التسليم
+            </div>
         </div>
+        <div class="mt-5 w-75 ms-auto me-auto rounde add-offer p-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <img class=" p-5 w-100" src="../assets/images/jakob-owens-565883-unsplash.png" alt="">
+                    </div>
+                    <div class="col-lg-8 col-md-6 col-sm-12">
+                        <div class="p-5 pe-3 mt-3">
+                            <p class="fs-2 fw-bold">
+                                العميل : مازن محمد
+                            </p>
+                            <p class="main-color fs-3">
+                                رقم الطلب : 564416
+                            </p>
+                            <p class="main-color fs-3 ">
+                                المجموع : 75ريال
+                            </p>
+                            <p class="main-color fs-4">
+                                العنوان : 127شارع المعز بن علي -حي الروضة الرياض
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="rounded-pill fs-3 text-center text-light ms-auto me-auto w-25 bg-green p-1 position-relative">
+                <a href="" class="float"></a>
+                الطلب مكتمل
+            </div>
+        </div>
+
     </main>
     <footer class="footer text-light">
         <div class="container-fluid p-5 pb-3">
@@ -257,7 +208,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12 text-start">
+                <div class="col-md-6 col-sm-12 ">
                     <img src="../assets/images/sofra logo.png" class="w-75" alt="">
                 </div>
             </div>
